# system-monitor

./: Cargo.toml  README.md  architecture-design.md  enhanced-architecture-design.md  implementation-guide.md  improvement-specification.md  pseudocode-specification.md  technical-specification.md
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
src/: app.rs  lib.rs  main.rs
src/config/: mod.rs
src/error/: mod.rs
src/system/: collector.rs  info.rs  metrics.rs  mod.rs
src/ui/: charts.rs  components.rs  manager.rs  mod.rs  tabs.rs
src/utils/: mod.rs
tests/: data_flow.rs
