[package]
name = "system-monitor"
version = "0.1.0"
edition = "2021"
authors = ["System Monitor Team"]
description = "A real-time system monitoring tool built with Rust and egui"
license = "MIT"
repository = "https://github.com/your-org/system-monitor"
keywords = ["system", "monitor", "gui", "performance", "windows"]
categories = ["gui", "system-tools"]

[dependencies]
# GUI Framework
egui = "0.24"
eframe = { version = "0.24", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }

# System Information
sysinfo = "0.29"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Time and Date
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.13"
dirs = "5.0"

# Collections
smallvec = "1.11"
# System utilities
num_cpus = "1.16"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "psapi",
    "sysinfoapi",
    "winnt",
] }

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true