[package]
name = "system-monitor"
version = "0.1.0"
edition = "2021"
authors = ["System Monitor Team"]
description = "A real-time system monitoring tool built with Rust and egui"
license = "MIT"
repository = "https://github.com/your-org/system-monitor"
keywords = ["system", "monitor", "gui", "performance", "windows"]
categories = ["gui", "system-tools"]

[lib]
name = "system_monitor"
path = "src/lib.rs"

[dependencies]
# GUI Framework
egui = "0.31.1"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
epaint = "0.31.1"

# System Information
sysinfo = "0.35.2"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "2.0.12"

# Logging
log = "0.4.27"
env_logger = "0.11.8"

# Time and Date
chrono = { version = "0.4.41", features = ["serde"] }

# Configuration
config = "0.15.11"
dirs = "6.0.0"

# Collections
smallvec = "1.11"
# System utilities
num_cpus = "1.16"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "psapi",
    "sysinfoapi",
    "winnt",
] }

[dev-dependencies]
criterion = "0.6.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true